Fix progress indicator overlapping edge of container

--- a/client/src/components/ProgressBar.module.scss
+++ b/client/src/components/ProgressBar.module.scss
@@ -3,8 +3,8 @@
   width: var(--progress-bar--width, 100%);
   height: 0.5rem;
   background-color: var(--background--surface--hover);
+  border: 1px solid transparent;
   border-radius: 1rem;
-  padding: 1px;
   position: relative;
   overflow: hidden;
 }
